# png-disability-streamlit

./: Makefile  README.md  main.py  pyproject.toml
data/: disability_ages.xlsx  disability_national.xlsx  disability_province.xlsx  disability_sex.xlsx  disability_urban_rural.xlsx
data/shapefiles/: gamma_gaussian_LLG.dbf  gamma_gaussian_LLG.shx  gamma_gaussian_district.dbf  gamma_gaussian_district.qmd  gamma_gaussian_district.shp  gamma_gaussian_district.shx  gamma_gaussian_province.dbf  gamma_gaussian_province.qmd  gamma_gaussian_province.shp  gamma_gaussian_province.shx
